<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SingInActivity">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginBottom="-47dp"
        android:src="@drawable/logo_login"
        app:layout_constraintBottom_toTopOf="@id/edit_text_email"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:background="@drawable/bg_edittext_normal"
        app:layout_constraintBottom_toTopOf="@id/edit_text_senha"
        android:layout_height="50dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_senha"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="73dp"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:background="@drawable/bg_edittext_normal"
        app:layout_constraintBottom_toTopOf="@id/btn_entrar"
        android:layout_height="50dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_esqueceu_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-28dp"
        android:text="@string/recuperar_a_senha"
        android:textColor="@color/white"
        android:textAlignment="textEnd"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_senha"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entrar"
        android:layout_width="match_parent"
        android:text="@string/Entrar"
        android:layout_height="50dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="85dp"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_normal"
        app:layout_constraintBottom_toTopOf="@id/txt_registar_conta"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_registar_conta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/n_o_tem_uma_conta_registre_se"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>