<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegistrationActivity">

    <ImageView
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:src="@drawable/cadastro_img"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="-46dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/email"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:background="@drawable/bg_edittext_normal"
        app:layout_constraintBottom_toTopOf="@id/edit_senha"
        android:layout_height="50dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_senha"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/Senha"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:background="@drawable/bg_edittext_normal"
        app:layout_constraintBottom_toTopOf="@id/edit_repitir_senha"
        android:layout_height="50dp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_repitir_senha"
        android:layout_width="match_parent"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="38dp"
        android:hint="@string/repita_a_senha"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:background="@drawable/bg_edittext_normal"
        app:layout_constraintBottom_toTopOf="@id/btn_cadastrar"
        android:layout_height="50dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:text="@string/Cadastrar"
        android:layout_height="50dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="40dp"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_normal"
        app:layout_constraintBottom_toTopOf="@+id/txt_conectar_conta"
        />


        <TextView
            android:id="@+id/txt_conectar_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:text="@string/j_tem_uma_conta_conecte_se"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>